1. Collection API Улучшения[#242051]