@@ -2,6 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -21,7 +22,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList(K1SK1);
+        List<String> input = new ArrayList<>(List.of(K1SK1));
         List<String> expect = Arrays.asList(K1, K1SK1);
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -29,7 +30,7 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList(K1, K1SK1);
+        List<String> input = new ArrayList<>(List.of(K1, K1SK1));
         List<String> expect = Arrays.asList(K1, K1SK1);
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
@@ -37,8 +38,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortAsc() {
-        List<String> input = Arrays.asList(K1SK1SSK1, K2SK1SSK1,
-                K2, K1SK1, K2SK1SSK2, K1SK1SSK2, K2SK1, K1);
+        List<String> input = new ArrayList<>(List.of(K1SK1SSK1, K2SK1SSK1,
+                K2, K1SK1, K2SK1SSK2, K1SK1SSK2, K2SK1, K1));
         List<String> expect = Arrays.asList(K1, K1SK1, K1SK1SSK1,
                 K1SK1SSK2, K2, K2SK1, K2SK1SSK1, K2SK1SSK2);
         Departments.sortAsc(input);
@@ -47,8 +48,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenSortDesc() {
-        List<String> input = Arrays.asList(K1SK1SSK1, K2SK1SSK1,
-                K2, K1SK1, K2SK1SSK2, K1SK1SSK2, K2SK1, K1);
+        List<String> input = new ArrayList<>(List.of(K1SK1SSK1, K2SK1SSK1,
+                K2, K1SK1, K2SK1SSK2, K1SK1SSK2, K2SK1, K1));
         List<String> expect = Arrays.asList(K2, K2SK1, K2SK1SSK1, K2SK1SSK2,
                 K1, K1SK1, K1SK1SSK1, K1SK1SSK2);
         Departments.sortDesc(input);
