@@ -2,6 +2,7 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -10,18 +11,17 @@ import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
 
 public class NotifyAccountTest {
-
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = new ArrayList<>(List.of(
                 new Account("123", "Petr Arsentev", "eDer3432f"),
-                new Account("142", "Petr Arsentev", "000001")
+                new Account("142", "Petr Arsentev", "000001"))
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                new ArrayList<>(List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
-                )
+                ))
         );
         assertThat(NotifyAccount.sent(accounts), is(expect));
     }
